--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgs>
-                        <args>-parameters</args>
+                        <parameters>true</parameters>
                     </compilerArgs>
                 </configuration>
             </plugin>
